# aotpy

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
aotpy/: __init__.py  converter.py
aotpy/core/: __init__.py  aberration.py  ao_system.py  atmosphere.py  base.py  geometry.py  image.py  loop.py  optical_sensor.py  source.py  telescope.py  time.py  wavefront_corrector.py
aotpy/data/: __init__.py
aotpy/data/AOF/: subap.fits
aotpy/data/ERIS/: lo_subap.fits
aotpy/data/PAPYRUS/: T152_pupil.fits
aotpy/fits/: __init__.py  _keywords.py  reader.py  writer.py
aotpy/io/: __init__.py  base.py
aotpy/io/fits/: __init__.py  _file.py  _keywords.py  _strings.py  compat.py  reader.py  utils.py  writer.py
aotpy/level0/: __init__.py  ao_system.py  atmosphere.py  image.py  optical_sensor.py  rtc.py  source.py  telescope.py  wavefront_corrector.py
aotpy/translators/: __init__.py  aof.py  base.py  ciao.py  eris.py  eso.py  galacsi.py  keck.py  naomi.py  papyrus.py  utils.py
docs/source/: aotpy.core.rst  aotpy.data.rst  aotpy.io.fits.rst  aotpy.io.rst  aotpy.rst  aotpy.translators.rst  conf.py  data.rst  index.rst  modules.rst
