[metadata]
name = aotpy
version = 0.1.1
author = Tiago Gomes
author_email = tiagogomes@fe.up.pt
description = Helper package for handling Adaptive Optics Telemetry (AOT) standard files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kYwzor/aotpy
project_urls =
    Bug Tracker = https://github.com/kYwzor/aotpy/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages =
    aotpy
    aotpy.fits
    aotpy.level0
    aotpy.translators
python_requires = >=3.9
install_requires =
    astropy>=5.0
    numpy>=1.18
    scipy>=1.3