[metadata]
name = aotpy
version = 0.5.0
author = Tiago Gomes
author_email = tiagogomes@fe.up.pt
description = Helper package for handling Adaptive Optics Telemetry (AOT) standard files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kYwzor/aotpy
project_urls =
    Bug Tracker = https://github.com/kYwzor/aotpy/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
python_requires = >=3.10
install_requires =
    astropy>=5.1.1
    numpy>=1.20

[options.packages.find]
where = aotpy

[options.package_data]
data = *.fits

[options.extras_require]
esoarchive =
    pyvo>=1.4
savfiles =
    scipy>=1.3
docs =
    sphinx
    sphinx-rtd-theme
all =
    pyvo>=1.4
    scipy>=1.3
