[metadata]
name = aotpy
version = 0.7.0
author = Tiago Gomes
author_email = tiagogomes@fe.up.pt
description = Helper package for handling Adaptive Optics Telemetry (AOT) standard files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/STAR-PORT/aotpy
project_urls =
    Bug Tracker = https://github.com/STAR-PORT/aotpy/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    astropy>=5.1.1
    numpy>=1.20

[options.package_data]
aotpy.data = */*.fits

[options.extras_require]
esoarchive =
    pyvo>=1.4
savfiles =
    scipy>=1.5.0
docs =
    sphinx
    sphinx-rtd-theme
all =
    pyvo>=1.4
    scipy>=1.5.0
